# LearnCompilerPrinciples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sample.lyric
cli/: cli.c  cli.h
common/: common.h  unicodeUTF8.c  unicodeUTF8.h  utils.c  utils.h
parser/: parser.c  parser.h  token.list
src/com/craftinginterpreters/lox/: AstPrinter.java  Lox.java  Scanner.java
vm/: core.c  core.h  vm.c  vm.h
